# shockz-mp3-manager-cli

./: .env.example  .gitignore  README.md  extractor.py  pyproject.toml  requirements.txt
shockz/: __init__.py  audio.py  cli.py  config.py  device.py  labels.py  library.py
