[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shockz-mp3-manager-cli"
version = "1.0.0"
description = "CLI to download YouTube audio and sync flat MP3s to Shokz OpenSwim headphones"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Brandon Charleson" }]
keywords = ["shokz", "openswim", "mp3", "youtube", "yt-dlp", "cli", "headphones"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "yt-dlp>=2024.1",
]

[project.scripts]
shockz = "shockz.cli:main"

[project.urls]
Homepage = "https://github.com/bcharleson/shockz-mp3-manager-cli"
Repository = "https://github.com/bcharleson/shockz-mp3-manager-cli"
Issues = "https://github.com/bcharleson/shockz-mp3-manager-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["shockz*"]
